# Akutenshi

./: .gitignore  .gitmodules  CMakeLists.txt  History.md  README.md  TODO.md
cmake/: .SetupBuildEnvironment.cmake.kate-swp  SetupBuildEnvironment.cmake
inc/AkAsset/: Animation.hpp  Asset.hpp  AssetRegistry.hpp  Convert.hpp  Image.hpp  Material.hpp  Mesh.hpp  Serialize.hpp  ShaderProgram.hpp  Skin.hpp  Texture.hpp
inc/AkAsset/gltf/: Accessor.hpp  Animation.hpp  Asset.hpp  Buffer.hpp  BufferView.hpp  GLTF.hpp  GLTFAnimation.hpp  GLTFMaterial.hpp  GLTFMesh.hpp  GLTFSkin.hpp  Image.hpp  Material.hpp  Mesh.hpp  Node.hpp  Sampler.hpp  Scene.hpp  Skin.hpp  Texture.hpp  Types.hpp  Util.hpp
inc/AkCommon/: Bits.hpp  FPSCounter.hpp  Iterator.hpp  Memory.hpp  RingBuffer.hpp  ScopeGuard.hpp  SlotMap.hpp  SparseGrid.hpp  String.hpp  Time.hpp  Timer.hpp  Traits.hpp
inc/AkEngine/: Log.hpp
inc/AkEngine/component/: Behaviours.hpp  Camera.hpp
inc/AkEngine/data/: Base64.hpp  Brotli.hpp  Hash.hpp  Json.hpp  MsgPack.hpp  PVPath.hpp  PValue.hpp  Rand.hpp  SUID.hpp  Serialize.hpp  SmartClass.hpp  SmartEnum.hpp
inc/AkEngine/entity/: ComponentManager.hpp  Config.hpp  Entity.hpp  EntityManager.hpp  Type.hpp
inc/AkEngine/event/: Dispatcher.hpp  Event.hpp  Util.hpp
inc/AkEngine/filesystem/: CFile.hpp  Filesystem.hpp  Path.hpp
inc/AkGame/: CameraControllerBehaviour.hpp
inc/AkMath/: Matrix.hpp  Quaternion.hpp  Scalar.hpp  Serialize.hpp  Types.hpp  Vector.hpp
inc/AkRender/: DebugDraw.hpp  SceneRenderer.hpp  SceneRendererDefault.hpp
inc/ak/: BitManipulaton.hpp  Bits.hpp  Iter.hpp  Iterator.hpp  Log.hpp  Macros.hpp  PrimitiveTypes.hpp  ScopeGuard.hpp  String.hpp  Timer.hpp  Traits.hpp
inc/akasset/: Animation.hpp  Asset.hpp  AssetRegistry.hpp  Convert.hpp  Image.hpp  Material.hpp  Mesh.hpp  Serialize.hpp  Skin.hpp  Texture.hpp
inc/akcommon/: Bits.hpp  DynamicBitset.hpp  FPSCounter.hpp  Iterator.hpp  Macro.hpp  Memory.hpp  Meta.hpp  ObjectPool.hpp  PrimitiveTypes.hpp  ScopeGuard.hpp  SlotMap.hpp  SparseGrid.hpp  String.hpp  Time.hpp  Timer.hpp  Traits.hpp  UnorderedVector.hpp
inc/akengine/: Config.hpp
inc/akgame/: CameraControllerBehaviour.hpp  game.hpp
inc/akinput/: Types.hpp
inc/akmath/: Matrix.hpp  Quaternion.hpp  Scalar.hpp  Serialize.hpp  Types.hpp  Vector.hpp
inc/akrender/: DebugDraw.hpp  SceneRenderer.hpp  SceneRendererDefault.hpp
inc/akres/: Models.hpp  Textures.hpp
inc/aksound/: Channels.hpp
inc/stx/: Filesystem.hpp
source/akasset/: CMakeLists.txt
source/akasset/inc/akasset/: Animation.hpp  Asset.hpp  ShaderProgram.hpp
source/akasset/inc/akasset/gltf/: GLTFMaterial.hpp  Material.hpp  Node.hpp  Types.hpp
source/akasset/src/: sugar.cmake
source/akasset/src/akasset/: AssetRegistry.cpp
source/akasset/src/akasset/gltf/: GLTFAnimation.cpp  GLTFMaterial.cpp  GLTFMesh.cpp  GLTFSkin.cpp
source/akcommon/: CMakeLists.txt
source/akcommon/inc/akcommon/: String.hpp
source/akcommon/src/: sugar.cmake
source/akcommon/src/akcommon/: PrimitiveTypes.cpp  sugar.cmake
source/akengine/: CMakeLists.txt
source/akengine/inc/akcommon/: Memory.hpp  SparseGrid.hpp
source/akengine/inc/akengine/component/: Behaviours.hpp  Camera.hpp
source/akengine/inc/akengine/data/: Brotli.hpp  MsgPack.hpp  PVPath.hpp  PValue.hpp  Random.hpp  SUID.hpp
source/akengine/inc/akengine/entity/: ComponentManager.hpp
source/akengine/inc/akengine/entity/internal/: EntityGraph.hpp  NameStorage.hpp
source/akengine/inc/akengine/event/: Event.hpp
source/akengine/inc/akengine/scene/: Scene.hpp  SceneManager.hpp
source/akengine/inc/akmath/: Matrix.hpp
source/akengine/src/: sugar.cmake
source/akengine/src/akengine/data/: Json.cpp  MsgPack.cpp  Serialize.cpp
source/akengine/src/akengine/entity/: Config.cpp
source/akengine/src/akengine/entity/internal/: EntityGraph.cpp  sugar.cmake
source/akengine/src/akengine/filesystem/: sugar.cmake
source/akengine/src/akengine/scene/: sugar.cmake
source/akgame/: CMakeLists.txt
source/akgame/inc/: game.hpp
source/akgame/src/: game.cpp  sugar.cmake
source/akgame/src/akgame/: sugar.cmake
source/akinput/: CMakeLists.txt
source/akinput/inc/akinput/keyboard/: Keys.hpp
source/akinput/inc/akinput/mouse/: Mouse.hpp
source/akinput/src/: sugar.cmake
source/akinput/src/akinput/: sugar.cmake
source/akinput/src/akinput/mouse/: sugar.cmake
source/akmain/: CMakeLists.txt
source/akmain/src/: main.cpp  sugar.cmake
source/akmath/: CMakeLists.txt
source/akmath/inc/akmath/: Quaternion.hpp
source/akmath/src/: sugar.cmake
source/akmath/src/akmath/: Types.cpp  sugar.cmake
source/akrender/: CMakeLists.txt
source/akrender/inc/akrender/: DebugDraw.hpp
source/akrender/inc/akrender/gl/: Draw.hpp  Shaders.hpp
source/akrender/inc/akrender/window/: Monitor.hpp  Types.hpp
source/akrender/src/: sugar.cmake
source/akrender/src/akrender/: DebugDraw.cpp  SceneRendererDefault.cpp
source/akrender/src/akrender/gl/: Buffers.cpp  RenderTarget.cpp  Shaders.cpp
source/aksound/: CMakeLists.txt
source/aksound/inc/aksound/backend/: Types.hpp
source/aksound/inc/aksound/backend/internal/: Mal.hpp
source/aksound/inc/aksound/util/: Decode.hpp  Util.hpp
source/aksound/src/: sugar.cmake
source/aksound/src/aksound/util/: Decode.cpp  Util.cpp
src/: game.cpp  imp.cpp  main.cpp  resource.cpp  sugar.cmake
src/AkAsset/: AssetRegistry.cpp  Convert.cpp
src/AkCommon/: PrimitiveTypes.cpp  String.cpp  Time.cpp  Timer.cpp
src/AkEngine/: Log.cpp  Log_Internal.hpp  sugar.cmake
src/AkRender/: DebugDraw.cpp  SceneRendererDefault.cpp
src/AkSound/: sugar.cmake
src/ak/: Log.cpp  PrimitiveTypes.cpp  String.cpp  Timer.cpp  sugar.cmake
src/akasset/: AssetRegistry.cpp  Convert.cpp  sugar.cmake
src/akcommon/: String.cpp  Time.cpp  Timer.cpp
src/akengine/: Config.cpp  sugar.cmake
src/akgame/: game.cpp  sugar.cmake
src/akmain/: Debug.cpp  Debug.hpp  main.cpp  sugar.cmake
src/akmath/: sugar.cmake
src/akrender/: DebugDraw.cpp  SceneRendererDefault.cpp  sugar.cmake
src/akres/: Models.cpp  Textures.cpp  sugar.cmake
(+495 files in other folders)
